--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 </head>
 <body>
     Hunter Brincheski
+
+    Spirit of Sanford Collegiate Award Winner
+    Fugitive - Fight Club "Mastermind"
 </body>
 </html>
