--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 </head>
 <body>
     Hunter Brincheski
-
+</body>
+<body> 
     Spirit of Sanford Collegiate Award Winner
+</body>
+<body>
     Fugitive - Fight Club "Mastermind"
 </body>
 </html>
